--- a/about.htm
+++ b/about.htm
@@ -413,7 +413,7 @@
             </div>
             <div class="row" style="min-height: 50px;">
               <div class="col-md-8">
-                <p style="color: white;"><b>@ Design & Developed by : Team MMIT Siddharthnagar</b></p>
+                <p style="color: white;"><b>@ Design & Developed by : Team  Anchal patwa</b></p>
               </div>
               <div class="col-md-4">
                 <p style="color: white;"><b>Registered Candidate:</b></p>
